--- a/Lab3_REST/pom.xml
+++ b/Lab3_REST/pom.xml
@@ -76,6 +76,14 @@
             <artifactId>jersey-container-grizzly2-http</artifactId>
             <version>2.28</version>
         </dependency>
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.3.0</version>
+            <classifier>sources</classifier>
+            <scope>provided</scope>
+        </dependency>
+
     </dependencies>
 
 </project>
